# XrdBlackhole

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  index.html  mkdocs.yml  sitemap.xml
.github/actions/setup-build/: action.yml
.github/workflows/: ci.yml  docs.yml  release.yml
ARCHITECTURE/: index.html
ROADMAP/: index.html
changelog/: index.html
cmake/: XRootDFindLibs.cmake
config/: xrootd-blackhole.cfg  xrootd.cfg
configuration/: index.html
docker/: Dockerfile
docs/: ARCHITECTURE.md  PreReleaseNotes.txt  ROADMAP.md  ReleaseNotes.txt  configuration.md  exthandler-guide.md  index.md  release-notes.md
exthandler-guide/: index.html
packaging/: make-src-tar.sh  makesrpm.sh
packaging/rhel/: xrootd-blackhole.spec.in
search/: search_index.json
src/: CMakeLists.txt  XrdBlackhole.cmake
src/XrdBlackhole/: BlackholeFS.cc  BlackholeFS.hh  XrdBlackholeMetrics.cc  XrdBlackholeMetrics.hh  XrdBlackholeOss.cc  XrdBlackholeOss.hh  XrdBlackholeOssDir.cc  XrdBlackholeOssDir.hh  XrdBlackholeOssFile.cc  XrdBlackholeOssFile.hh  XrdBlackholeStats.cc  XrdBlackholeStats.hh  XrdBlackholeXAttr.cc  XrdBlackholeXAttr.hh
tests/: CMakeLists.txt  test_BlackholeFS.cc  test_OssDir.cc  test_OssFile.cc  test_Stats.cc  test_globals.cc
